# feagi-core

./: .gitignore  API_DIFFERENCES_feagi_data_structures.md  ARCHITECTURE.md  BRAIN_REGION_UPDATE_IMPLEMENTATION.md  CRATES_IO_PUBLICATION_READINESS.md  CRATE_STRUCTURE_ANALYSIS.md  Cargo.toml  Cargo.toml.bak  FINE_GRAINED_LOCKING_REFACTORING.md  FULL_NPU_MIGRATION.md  GPU_AUTO_SELECTION.md  INT8_ARCHITECTURE_REVIEW.md  IPU_OPU_TYPES_ENDPOINTS_IMPLEMENTATION.md  LICENSE  MIGRATION_NOTES.md  NEURAL_DYNAMICS_TEST_FIXES.md  NEURAL_PROCESSING_REFACTOR_PLAN.md  PHASE_1_COMPLETE.md  PHASE_2_PROGRESS.md  PHASE_2_READY.md  PHASE_3_DISPATCH_COMPLETE.md  PROJECT_STRUCTURE_REVIEW.md  PUBLISHING.md  PUBLISHING_FIX.md  PUBLISHING_ORDER.md  README.md  REPOSITORY_MERGE_COMPLETE.md  RUST_CODE_CLEANUP.md  SLEEP_MODE_GRACEFUL_FALLBACK.md  SLEEP_MODE_IMPLEMENTATION.md  STRUCTURE_SUMMARY.md  VERSIONING_POLICY.md  build_bdu.sh  rust_multicrate_best_practices.md  test_integration.py
crates/feagi-agent/: ARCHITECTURE.md  Cargo.toml  README.md  SDK_USER_GUIDE.md
crates/feagi-agent-registry/: Cargo.toml
crates/feagi-agent-registry/src/: lib.rs  registry.rs  transport.rs  types.rs
crates/feagi-agent-sdk/: ARCHITECTURE.md  Cargo.toml  README.md
crates/feagi-agent-sdk/examples/: simple_sensory_agent.rs  transport_selection.rs
crates/feagi-agent-sdk/src/: client.rs  config.rs  error.rs  heartbeat.rs  lib.rs  reconnect.rs  transport.rs
crates/feagi-agent/examples/: new_vision_test.rs  psuedo_example.rs  simple_sensory_agent.rs  transport_selection.rs
crates/feagi-agent/src/: agent_id.rs  client.rs  common.rs  config.rs  core.rs  error.rs  feagi_agent_client_error.rs  feagi_agent_error.rs  feagi_agent_server_error.rs  heartbeat.rs  lib.rs  reconnect.rs  transport.rs
crates/feagi-agent/tests/: live_http_contract_tests.rs  sdk_contract_tests.rs  session_state_machine_tests.rs  tests_connector_end_to_end.rs
crates/feagi-api/: CONTRACT_TESTING_COMPLETE.md  CORTICAL_AREAS_COMPLETE.md  CORTICAL_AREAS_END_TO_END.md  Cargo.toml  ENDPOINTS_IMPLEMENTATION_STATUS.md  OPENAPI_COMPLETE.md  PHASE1_COMPLETE.md  PHASE1_SUMMARY.md  PHASE2_COMPLETE.md  PHASE2_PROGRESS.md  PHASE3_PLAN.md  README.md  TODO.md  TRANSPORTS_INTEGRATION.md
crates/feagi-api/examples/: dump_openapi_json.rs  http_api_server.rs  test_openapi.rs
crates/feagi-api/src/: amalgamation.rs  lib.rs  openapi.rs
crates/feagi-api/templates/: custom-swagger-ui.html
crates/feagi-api/tests/: contract_tests.rs  feagi_configuration_contract_tests.toml
crates/feagi-bdu/: Cargo.toml  README.md
crates/feagi-bdu/src/: connectome_manager.rs  cortical_type_utils.rs  ffi.rs  lib.rs  neuroembryogenesis.rs  rng.rs  types.rs
crates/feagi-bdu/tests/: test_integration_simple.rs  test_real_genome_loading.rs  test_region_parent_tracking.rs
crates/feagi-brain-development/: Cargo.toml  README.md
crates/feagi-brain-development/src/: connectome_manager.rs  cortical_type_utils.rs  ffi.rs  lib.rs  neuroembryogenesis.rs  rng.rs  types.rs
crates/feagi-brain-development/tests/: test_integration_simple.rs  test_real_genome_loading.rs  test_region_parent_tracking.rs  test_synaptogenesis.rs
crates/feagi-burst-engine/: Cargo.toml  README.md  build.rs
crates/feagi-burst-engine/benches/: backend_comparison.rs
crates/feagi-burst-engine/docs/: CUDA_DEPLOYMENT_GUIDE.md  CUDA_PHASE2_COMPLETE.md  GPU_IMPLEMENTATION.md  PHASE_2_SUMMARY.md
crates/feagi-burst-engine/examples/: gpu_detection.rs  quantization_performance.rs
crates/feagi-burst-engine/src/: async_burst_loop.rs  burst_loop_runner.rs  burst_loop_runner.rs.disabled  dynamic_npu.rs  fire_ledger.rs  fire_structures.rs  fq_sampler.rs  lib.rs  motor_shm_writer.rs  neural_dynamics.rs  npu.rs  parameter_update_queue.rs  phase1_injection.rs  phase3_archival.rs  phase5_cleanup.rs  sleep.rs  synaptic_propagation.rs  (+2 more)
crates/feagi-config/: Cargo.toml  IMPLEMENTATION_COMPLETE.md  README.md
crates/feagi-connectome-serialization/: Cargo.toml  README.md
crates/feagi-connector-core/: Cargo.toml  README.md
crates/feagi-data-serialization/: Cargo.toml  README.md
crates/feagi-embedded/: BLE_EXTRACTION_STATUS.md  Cargo.toml  README.md  STATUS.md  TRANSPORT_ABSTRACTION_COMPLETE.md
crates/feagi-evo/: Cargo.toml  README.md
crates/feagi-evolutionary/: Cargo.toml  README.md
crates/feagi-inference-engine/: Cargo.toml  README.md
crates/feagi-io/: Cargo.toml  README.md  build.rs
crates/feagi-neural/: Cargo.toml  README.md
crates/feagi-observability/: Cargo.toml  DEBUG_FLAGS_USAGE.md  INTEGRATION_COMPLETE.md  INTEGRATION_STATUS.md  README.md
crates/feagi-plasticity/: Cargo.toml
crates/feagi-pns/: Cargo.toml  README.md  TRANSPORTS_MIGRATION.md
crates/feagi-runtime/: Cargo.toml
crates/feagi-runtime-embedded/: Cargo.toml  README.md
crates/feagi-runtime-std/: Cargo.toml  README.md
crates/feagi-sensorimotor/: Cargo.toml  README.md
crates/feagi-serialization/: Cargo.toml  README.md
crates/feagi-services/: Cargo.toml  README.md
feagi_connector_core/: Cargo.toml
feagi_connector_core/src/: connector_agent.rs  lib.rs  motor_device_cache.rs  motor_device_cache_old.rs  sensor_device_cache.rs  sensor_device_cache_old.rs
feagi_connector_core/tests/: tests_connector_end_to_end.rs  tests_data.rs.disabled  tests_data_pipeline.rs  tests_data_pipeline.rs.disabled
feagi_data_serialization/: Cargo.toml
feagi_data_serialization/docs/: byte_structure_container.md  byte_structure_global.md  feagi_byte_container.md  readme.md
feagi_data_serialization/src/: feagi_byte_container.rs  feagi_byte_structure_type.rs  feagi_serializable.rs  lib.rs
feagi_data_serialization/tests/: tests_serialization.rs
feagi_data_structures/: Cargo.toml
feagi_data_structures/docs/: genomic.md  neuron_voxels.md  readme.md
feagi_data_structures/src/: common_macros.rs  error.rs  feagi_json.rs  feagi_signal.rs  lib.rs  shared_enums.rs
feagi_data_structures/tests/: .gitignore  tests_brain_regions.rs  tests_data.rs  tests_genomic.rs  tests_neuron_voxels.rs  tests_neurons.rs  tests_neurons.rs.disabled  tests_processing.rs
(+1697 files in other folders)
