# ============================================================================
# UMBRELLA CRATE: feagi
# 
# This is the primary crate that users import. It re-exports all components
# with feature flags for selective compilation.
# All workspace members are also published individually for selective use.
# ============================================================================

[package]
name = "feagi"
version = "0.0.0"
edition = "2021"
authors = ["Neuraville Inc. <feagi@neuraville.com>"]
license = "Apache-2.0"
description = "Framework for Evolutionary Artificial General Intelligence - Bio-Inspired Neural Computation"
repository = "https://github.com/feagi/feagi-core"
readme = "README.md"
keywords = ["neuroscience", "ai", "neural-network", "brain", "agi"]
categories = ["science", "simulation"]

[features]
default = ["std", "full"]

# Platform targets
std = [
    "feagi-state-manager/std",
    "feagi-npu-burst-engine/default",
]
no_std = [
    "feagi-state-manager/no_std",
]
wasm = [
    "feagi-state-manager/wasm",
]

# Component features (selective compilation)
full = ["compute", "io"]
compute = ["burst-engine", "bdu", "plasticity", "serialization", "state-manager"]
io = ["pns", "agent-sdk"]

# Individual components
burst-engine = ["feagi-npu-burst-engine"]
bdu = ["feagi-bdu"]
plasticity = ["feagi-npu-plasticity"]
state-manager = ["feagi-state-manager"]
serialization = ["feagi-connectome-serialization"]
pns = ["feagi-io"]
agent-sdk = ["feagi-agent"]

[dependencies]
# Foundation (vendored into feagi-core when published)
feagi-evo = { version = "0.0.0", path = "crates/feagi-evo" }
feagi-npu-neural = { version = "0.0.0", path = "crates/feagi-npu/neural" }
serde_json = "1.0"

# Infrastructure (vendored)
feagi-state-manager = { version = "0.0.0", path = "crates/feagi-state-manager", optional = true }

# Algorithms (vendored)
feagi-npu-burst-engine = { version = "0.0.0", path = "crates/feagi-npu/burst-engine", optional = true }
feagi-bdu = { version = "0.0.0", path = "crates/feagi-bdu", optional = true }
feagi-npu-plasticity = { version = "0.0.0", path = "crates/feagi-npu/plasticity", optional = true }
feagi-connectome-serialization = { version = "0.0.0", path = "crates/feagi-connectome-serialization", optional = true }

# I/O (vendored)
feagi-io = { version = "0.0.0", path = "crates/feagi-io", optional = true }
feagi-agent = { version = "0.0.0", path = "crates/feagi-agent", optional = true }

# ============================================================================
# WORKSPACE CONFIGURATION
# ============================================================================

[workspace]
resolver = "2"
members = [
    # === Foundation Layer ===
    "crates/feagi-config",             # Configuration loader (TOML + overrides)
    
    # === NPU Subsystem (Neural Processing Unit) ===
    "crates/feagi-npu/neural",         # Neural computation: types + algorithms + models (no_std)
    "crates/feagi-npu/runtime",        # Runtime trait definitions (no_std)
    "crates/feagi-npu/runtime-std",    # Desktop/Server runtime (Vec, Rayon)
    "crates/feagi-npu/runtime-embedded", # ESP32/RTOS runtime (fixed arrays, no_std)
    "crates/feagi-npu/burst-engine",   # NPU execution & inference
    
    # === Platform HALs ===
    "crates/feagi-embedded",           # Platform abstraction + implementations (ESP32, Arduino, etc.)
    
    # === Infrastructure Layer (Cross-Cutting) ===
    "crates/feagi-state-manager",      # Runtime state management
    "crates/feagi-evo",                # Genome I/O and evolution (genotype)
    "crates/feagi-services",           # Service layer (stable application boundary)
    "crates/feagi-api",                # REST API layer (HTTP + ZMQ transports)
    "crates/feagi-observability",      # Unified observability (logging, telemetry, profiling)
    
    # === Algorithm Layer ===
    "crates/feagi-bdu",                # Neurogenesis (brain development)
    "crates/feagi-npu/plasticity",     # Synaptic learning (STDP, memory)
    "crates/feagi-connectome-serialization",  # Connectome persistence
    
    # === I/O Layer ===
    "crates/feagi-io",                 # I/O System (ZMQ/UDP transport)
    "crates/feagi-agent",              # Agent library (Rust client library)
    
    # === Applications ===
    "crates/feagi-transports",         # Transport layer abstractions
    
    # === Data Processing ===
    "crates/feagi-connector-core",     # Connector agent core functionality
    "crates/feagi-data-serialization", # Data serialization formats
    "crates/feagi-data-structures",    # Core data structures
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.75"
authors = ["Neuraville Inc. <feagi@neuraville.com>"]
license = "Apache-2.0"
repository = "https://github.com/feagi/feagi-core"
homepage = "https://feagi.org"
documentation = "https://docs.rs/feagi"

[workspace.dependencies]
# Core dependencies (shared across crates)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.50"
rayon = "1.11"
ndarray = { version = "0.17.1", features = ["rayon"] }
ahash = { version = "0.8", default-features = false, features = ["std", "serde", "compile-time-rng"] }  # Fast non-cryptographic hashing (no runtime-rng for WASM)
tracing = "0.1"  # Structured logging and diagnostics

# Additional dependencies from feagi-data-processing
image = "0.25.9"
uuid = { version = "1.11", features = ["v7", "serde", "js"] }  # js feature for WASM support
paste = "1.0.15"

# GPU acceleration (WGPU - cross-platform native GPU library)
wgpu = "0.19"
pollster = "0.3"  # Async/await executor for GPU operations
bytemuck = { version = "1.14", features = ["derive"] }  # Type casting for GPU buffers

# FEAGI data crates (now internal to workspace)
feagi-data-structures = { path = "crates/feagi-data-structures" }
feagi-data-serialization = { path = "crates/feagi-data-serialization" }

# Workspace-internal crates
feagi-connectome-serialization = { path = "crates/feagi-connectome-serialization" }
feagi-observability = { path = "crates/feagi-observability" }

# PyO3 for Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"

[profile.release]
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization, slower compile
opt-level = 3        # Maximum optimization
panic = "abort"      # Smaller binary, no unwinding

[profile.dev]
opt-level = 1        # Some optimization in dev for reasonable performance

[profile.test]
opt-level = 0
debug = true

# ============================================================================
# BINARY TOOLS
# ============================================================================

[[bin]]
name = "migrate_genome"
path = "tools/migrate_genome.rs"
required-features = []
