# ============================================================================
# UMBRELLA CRATE: feagi
# 
# This is the primary crate that users import. It re-exports all components
# with feature flags for selective compilation.
# All workspace members are also published individually for selective use.
# ============================================================================

[package]
name = "feagi"
version = "0.0.1-beta.18"
edition = "2021"
authors = ["Neuraville Inc. <feagi@neuraville.com>"]
license = "Apache-2.0"
description = "Framework for Evolutionary Artificial General Intelligence - Bio-Inspired Neural Computation"
repository = "https://github.com/feagi/feagi-core"
readme = "README.md"
keywords = ["neuroscience", "ai", "neural-network", "brain", "agi"]
categories = ["science", "simulation"]

[features]
default = ["common-config-feagi-server"]

# Common Configurations (Common compile feature sets)
common-config-feagi-server = [
    "platform-std",
    "agent-server",
    "agent-transport-zmq",
    "agent-transport-websocket-std",
    "agent-transport-shm",
    "agent-transport-bluetooth",
]
common-config-feagi-client = [
    "platform-std",
    "agent-client",
    "agent-transport-zmq",
    "agent-transport-websocket-std",
    "agent-transport-shm",
    "agent-transport-bluetooth",
    "agent-client-asynchelper-tokio"
]

# Platform targets
platform-std = [
    "feagi-agent/platform-std",
    "feagi-state-manager/std",
    "feagi-npu-burst-engine/default",
]
platform-no-std = [
    "feagi-agent/platform-no-std",
    #"feagi-state-manager/no-std",
]
platform-wasm = [
    "feagi-agent/platform-wasm",
    "feagi-state-manager/wasm",
]

# Feagi Agents
# STD implementations
agent-server = ["feagi-agent/agent-server"]
agent-client = ["feagi-agent/agent-client"]
agent-client-asynchelper-tokio = ["feagi-agent/agent-client-asynchelper-tokio"]
agent-transport-zmq = ["feagi-agent/agent-client"]
agent-transport-websocket-std = ["feagi-agent/agent-transport-websocket-std"]
agent-transport-shm = ["feagi-agent/agent-transport-shm"]
agent-transport-bluetooth = ["feagi-agent/agent-transport-bluetooth"]
# WASM cannot be mixed with STD implementations
agent-transport-websocket-wasm = ["feagi-agent/agent-transport-websocket-wasm"]

# Feagi Brain
#brain_burst_engine = ["feagi-npu-burst-engine"]
#brain_plasticity = ["feagi-npu-plasticity"]
#brain_development_unit = ["feagi-brain-development"]



[dependencies]
# Foundation (vendored into feagi-core when published)
feagi-evolutionary = { version = "=0.0.1-beta.18", path = "crates/feagi-evolutionary" }
feagi-npu-neural = { version = "=0.0.1-beta.18", path = "crates/feagi-npu/neural" }
serde_json = "1.0"
feagi-structures = { version = "=0.0.1-beta.18", path = "crates/feagi-structures" }
feagi-serialization = { version = "=0.0.1-beta.18", path = "crates/feagi-serialization" }
ndarray = { workspace = true }

# Infrastructure (vendored)
feagi-state-manager = { version = "=0.0.1-beta.18", path = "crates/feagi-state-manager", optional = true }

# Algorithms (vendored)
feagi-npu-burst-engine = { version = "=0.0.1-beta.18", path = "crates/feagi-npu/burst-engine", optional = true }
feagi-brain-development = { version = "=0.0.1-beta.18", path = "crates/feagi-brain-development", optional = true }
feagi-sensorimotor = { version = "=0.0.1-beta.18", path = "crates/feagi-sensorimotor", optional = true }
feagi-npu-plasticity = { version = "=0.0.1-beta.18", path = "crates/feagi-npu/plasticity", optional = true }

# I/O (vendored)
feagi-io = { version = "=0.0.1-beta.18", path = "crates/feagi-io", optional = true }
feagi-agent = { version = "=0.0.1-beta.18", path = "crates/feagi-agent", optional = true }
feagi-services = { version = "=0.0.1-beta.18", path = "crates/feagi-services", optional = true }

# Async runtime is now a feature of feagi-data-structures

[dev-dependencies]
# For integration tests that need GenomeService
feagi-services = { version = "=0.0.1-beta.18", path = "crates/feagi-services" }
feagi-npu-runtime = { version = "=0.0.1-beta.18", path = "crates/feagi-npu/runtime", features = ["std"] }
ahash = { workspace = true }
feagi-config = { version = "=0.0.1-beta.18", path = "crates/feagi-config" }
parking_lot = "0.12"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
# Optional crates needed by root integration tests
feagi-sensorimotor = { version = "=0.0.1-beta.18", path = "crates/feagi-sensorimotor" }
feagi-brain-development = { version = "=0.0.1-beta.18", path = "crates/feagi-brain-development" }
feagi-npu-plasticity = { version = "=0.0.1-beta.18", path = "crates/feagi-npu/plasticity" }
feagi-io = { version = "=0.0.1-beta.18", path = "crates/feagi-io" }
feagi-agent = { version = "=0.0.1-beta.18", path = "crates/feagi-agent" }

# ============================================================================
# WORKSPACE CONFIGURATION
# ============================================================================

[workspace]
resolver = "2"
members = [
    # === Foundation Layer ===
    "crates/feagi-config",             # Configuration loader (TOML + overrides)
    
    # === NPU Subsystem (Neural Processing Unit) ===
    "crates/feagi-npu/neural",         # Neural computation: types + algorithms + models (no_std)
    "crates/feagi-npu/runtime",        # Runtime traits + implementations (std/embedded via features)
    "crates/feagi-npu/burst-engine",   # NPU execution & inference
    
    # === Platform HALs ===
    "crates/feagi-hal",                # Hardware Abstraction Layer (HAL) - platform abstraction + implementations (ESP32, Arduino, etc.)
    
    # === Infrastructure Layer (Cross-Cutting) ===
    "crates/feagi-state-manager",      # Runtime state management
    "crates/feagi-evolutionary",                # Genome I/O and evolution (genotype)
    "crates/feagi-services",           # Service layer (stable application boundary)
    "crates/feagi-api",                # REST API layer (HTTP + ZMQ transports)
    "crates/feagi-observability",      # Unified observability (logging, telemetry, profiling)
    
    # === Algorithm Layer ===
    "crates/feagi-brain-development",                # Neurogenesis (brain development)
    "crates/feagi-npu/plasticity",     # Synaptic learning (STDP, memory)
    
    # === I/O Layer ===
    "crates/feagi-io",                 # I/O System (ZMQ/UDP transport)
    "crates/feagi-agent",              # Agent library (Rust client library)
    
    # === Applications ===
    
    # === Data Processing ===
    "crates/feagi-sensorimotor",                # Sensorimotor System - data processing & encoding (sensory & motor)
    "crates/feagi-serialization", # Data serialization formats
    "crates/feagi-structures",    # Core data structures
]

[workspace.package]
version = "0.0.1-beta.18"
edition = "2021"
rust-version = "1.75"
authors = ["Neuraville Inc. <feagi@neuraville.com>"]
license = "Apache-2.0"
repository = "https://github.com/feagi/feagi-core"
homepage = "https://feagi.org"
documentation = "https://docs.rs/feagi"

[workspace.dependencies]
# Core dependencies (shared across crates)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "1.0.50"
rayon = "1.11"
ndarray = { version = "0.17.1", features = ["rayon"] }
ahash = { version = "0.8", default-features = false, features = ["std", "serde", "compile-time-rng"] }  # Fast non-cryptographic hashing (no runtime-rng for WASM)
tracing = "0.1"  # Structured logging and diagnostics

# Additional dependencies from feagi-data-processing
image = "0.25.9"
uuid = { version = "1.11", features = ["v7", "serde", "js"] }  # js feature for WASM support
paste = "1.0.15"

# GPU acceleration (WGPU - cross-platform native GPU library)
wgpu = "0.19"
pollster = "0.3"  # Async/await executor for GPU operations
bytemuck = { version = "1.14", features = ["derive"] }  # Type casting for GPU buffers

# FEAGI data crates (now internal to workspace)
feagi-structures = { version = "=0.0.1-beta.18", path = "crates/feagi-structures" }
feagi-serialization = { version = "=0.0.1-beta.18", path = "crates/feagi-serialization" }

# Workspace-internal crates
feagi-observability = { version = "=0.0.1-beta.18", path = "crates/feagi-observability" }

[profile.release]
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization, slower compile
opt-level = 3        # Maximum optimization
panic = "abort"      # Smaller binary, no unwinding

[profile.dev]
opt-level = 1        # Some optimization in dev for reasonable performance

[profile.test]
opt-level = 0
debug = true

# ============================================================================
# BINARY TOOLS
# ============================================================================

[[bin]]
name = "migrate_genome"
path = "tools/migrate_genome.rs"
required-features = []

[[bin]]
name = "perf_compare"
path = "tools/perf_compare.rs"
required-features = []
