[package]
name = "feagi_connector_core"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Adds Caching and Processing systems that are used by Feagi Connector"
repository.workspace = true
homepage.workspace = true


[dependencies]
ndarray = { workspace = true }
paste = "1.0"
feagi_data_structures = { workspace = true }