[package]
name = "Feagi-Data-Serialization"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Adds serialization and deserialization to select Feagi Data Structures."


[dependencies]
serde_json = { workspace = true }
byteorder = "1.5.0"
feagi_data_structures = { path = "../feagi_data_structures", package = "Feagi-Data-Structures" }