[package]
name = "feagi_data_structures"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "The most core library, defines the basic data types used by FEAGI, as well as some processors to modify them"
repository.workspace = true
homepage.workspace = true

[dependencies]
serde_json = { workspace = true }
ndarray = { workspace = true }

[dev-dependencies]
ndarray-npy = "0.9.1"