[package]
name = "feagi-agent-registry"
version = "0.1.0"
edition = "2021"
authors = ["FEAGI Team"]
description = "Transport-agnostic agent registration and management for FEAGI"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "1.0"

[dev-dependencies]

