[package]
name = "feagi-agent"
version = "0.0.1-beta.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Client library for building FEAGI agents in Rust"
readme = "README.md"

[dependencies]
# Observability
feagi-observability = { workspace = true }
tracing = "0.1"  # Required for tracing macros

# Core dependencies (always included)
zmq = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # Still needed for registration/heartbeat messages
thiserror = "1.0"
base64 = "0.22"

# Async runtime
tokio = { version = "1.0", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }

# FEAGI internal crates (core)
feagi-io = { version = "0.0.1-beta.1", path = "../feagi-io" }
feagi-structures = { version = "0.0.1-beta.1", path = "../feagi-structures" }
feagi-serialization = { version = "0.0.1-beta.1", path = "../feagi-serialization" }

# SDK dependencies (optional, behind feature flags)
feagi-sensorimotor = { version = "0.0.1-beta.1", path = "../feagi-sensorimotor", optional = true }
reqwest = { version = "0.12", optional = true, features = ["json"] }
image = { version = "0.25", optional = true }
tokenizers = { version = "0.19", optional = true }
futures = { version = "0.3", optional = true }
anyhow = { version = "1.0", optional = true }

[dev-dependencies]
env_logger = "0.11"
criterion = "0.5"
tokio-test = "0.4"
feagi-sensorimotor = { version = "0.0.1-beta.2", path = "../feagi-sensorimotor" }

[features]
default = ["sdk"]

# Async support
async = ["tokio", "async-trait", "futures"]

# SDK features
sdk = ["sdk-video", "sdk-text", "async", "anyhow"]

# Shared SDK support for ConnectorAgent + device registration sync.
# This is not video-specific; it is used by multiple controller types.
sdk-io = ["feagi-sensorimotor", "reqwest"]

sdk-video = ["sdk-io", "image"]
sdk-text = ["sdk-io", "tokenizers"]
sdk-audio = []  # Future

# Blocking variants
blocking = []

[[example]]
name = "simple_sensory_agent"
path = "examples/simple_sensory_agent.rs"

