[package]
name = "feagi-agent"
version = "0.0.1-beta.8"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Client library for building FEAGI agents in Rust"
readme = "README.md"

[features]

# Platform targets
platform-std = ["feagi-io/platform-std"]
platform-no-std = ["feagi-io/platform-no-std"]
platform-wasm = ["feagi-io/platform-wasm"]

# Feagi Agents
agent-server = ["feagi-io/feagi-server"]
agent-client = ["feagi-io/feagi-client"]
agent-transport-zmq = ["feagi-io/zmq-transport"]
agent-transport-websocket-std = ["feagi-io/websocket-transport-std"]
agent-transport-shm = ["feagi-io/shm-transport"]
agent-transport-bluetooth = ["feagi-io/bluetooth-transport"]
# WASM features cannot be mixed with any of the default ones
agent-transport-websocket-wasm = ["feagi-io/websocket-transport-wasm"]
agent-js-bridge-wasm = ["feagi-io/js-bridge-wasm"]

[dependencies]


# Core dependencies (always included)
serde = { workspace = true }
serde_json = { workspace = true }

# FEAGI internal crates (core)
feagi-io = {path = "../feagi-io"}
feagi-serialization = {path = "../feagi-serialization"}
feagi-structures = {path = "../feagi-structures"}
feagi-sensorimotor = {path = "../feagi-sensorimotor"}
log = "0.4.29"
base64 = "0.22.1"


