[package]
name = "feagi-api"
version = "0.1.0"
edition = "2021"
authors = ["FEAGI Team"]
license = "Apache-2.0"
description = "FEAGI REST API layer with HTTP and ZMQ transport adapters"

[dependencies]
# Core FEAGI
feagi-services = { path = "../feagi-services" }
feagi-types = { path = "../feagi-types" }
feagi-evo = { path = "../feagi-evo" }  # For embedded default genomes
feagi-transports = { path = "../feagi-transports", features = ["zmq-server"] }
feagi-pns = { path = "../feagi-pns" }  # For registration and domain logic
feagi-bdu = { path = "../feagi-bdu" }  # For examples
feagi-burst-engine = { path = "../feagi-burst-engine" }  # For examples
feagi_data_structures = { workspace = true }

# HTTP/REST
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
hyper = "1.0"
http-body-util = "0.1"

# Note: ZMQ provided by feagi-transports

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"

# Validation
validator = { version = "0.18", features = ["derive"] }

# OpenAPI (utoipa - compile-time, full OpenAPI 3.0 support)
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# Observability
feagi-observability = { workspace = true }

# Logging (now via feagi-observability)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Security (stubs for now, all MIT/Apache-2.0 compatible)
chacha20poly1305 = { version = "0.10", optional = true }
x25519-dalek = { version = "2.0", optional = true }
jsonwebtoken = { version = "9.0", optional = true }
argon2 = { version = "0.5", optional = true }

# TLS
rustls = { version = "0.21", optional = true }
tokio-rustls = { version = "0.24", optional = true }

# Error handling
thiserror = "1.0"

# HTTP client (for testing against Python API)
reqwest = { version = "0.11", features = ["json"] }

# Concurrency
parking_lot = "0.12"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
# Contract testing
insta = "1.34"
wiremock = "0.6"
assert-json-diff = "2.0"
tokio-test = "0.4"

[features]
default = []
security = ["chacha20poly1305", "x25519-dalek", "jsonwebtoken", "argon2"]
tls = ["rustls", "tokio-rustls"]

